--- a/template/css/profile.css
+++ b/template/css/profile.css
@@ -1,5 +1,5 @@
 .profile-nav{
-    background-image: url('images/profile.jpg');
+    background-image: url('../images/profile.jpg');
     background-repeat:no-repeat; 
     background-size: cover;
     margin:0px;
